@@ -1,8 +1,4 @@
 
-<?xml version="1.0" encoding="UTF-8" ?>
-<Module>
-<ModulePrefs title="fallout" />
-<Content type="html"><![CDATA[
 <!DOCTYPE html>
 <html lang="en">
 <base href="https://cdn.jsdelivr.net/gh/bubbls/dosbox/">
@@ -150,5 +146,3 @@
 </body>
 
 </html>
-]]></Content>
-</Module>
